--- a/index.html
+++ b/index.html
@@ -66,24 +66,26 @@
       <section class="bg-white container">
         <div class="container flex">
           <div class="container flex">
-            
+            <div class="large-col flex">
+              <img src="img/item3.svg" alt="">
+            </div>           
             <div class="small-col">
               <h1 class="hm">Dove trovarsi è facile</h1>
               <section class="text">Mettiti comodo in un canale vocale quando hei tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente  senza dover chiamare.</section>
             </div>
-            <div class="large-col flex">
-              <img src="img/item2.svg" alt="">
-            </div>
+ 
           </div>
         </div>
       </section>
       <section class="bg-gray">
         <div class="container big">
-          <h1>Tecnologia affidabile per tenersi in contatto</h1>
+          <div class="bh">
+            <h1 class="hm">Tecnologia affidabile per tenersi in contatto</h1>
+          </div>
           <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in un sessione di disegno con la condivisione schermo.</p>
           <img src="img/item4-big.svg" alt="">
-          <h2>pronto a iniziare la tua avventura?</h2>
-          <a class="mac2" href="Scarica per mac">Scarica per mac</a>
+          <h2>Pronto a iniziare la tua avventura?</h2>
+          <a class="mac2" href="Scarica per mac"> <b>&DownArrow;</b> Scarica per mac</a>
 
 
 
@@ -96,13 +98,35 @@
     <footer>
       <div class="container">
         <div class="footer-top">
-          <div class="footer-left"></div>
+          <div class="footer-left">
+            <h1 class="hm">
+              Il tuo posto per parlare
+            </h1>
+            <img src="img/ita.png" alt=""><h2>Italiano</h2>
+
+          </div>
           <div class="footer-right">
-            <nav class="footer-nav border">
-              <div class="nav-col border"></div>
-              <div class="nav-col border"></div>
-              <div class="nav-col border"></div>
-              <div class="nav-col border"></div>
+            <nav class="footer-nav">
+              <div class="nav-col">
+                <ul>
+                  <li>Prodotto</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li>
+                </ul>
+              </div>
+              <div class="nav-col">
+                <ul>
+                  <li>Compagnia</li><li>Chi siamo</li><li>Lavora con noi</li><li>Marchio</li><li>Redazione</li><li>Negozio</li>
+                </ul>
+              </div>
+              <div class="nav-col">
+                <ul>
+                  <li>Risorse</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assitenza</li><li>Assitenza</li>
+                </ul>
+              </div>
+              <div class="nav-col">
+                <ul>
+                  <li>Norme</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li>
+                </ul>
+              </div>
             </nav>
           </div>
         </div>
