--- a/index.html
+++ b/index.html
@@ -99,40 +99,45 @@
       <div class="container">
         <div class="footer-top">
           <div class="footer-left">
-            <h1 class="hm">
+            <h1 class="hm title">
               Il tuo posto per parlare
             </h1>
-            <img src="img/ita.png" alt=""><h2>Italiano</h2>
+            <section> 
+              <img src="img/ita.png" class="flag"><span>Italiano &#709;</span>
+            </section>
+            <section class="icone">
+              
+            </section>
 
           </div>
           <div class="footer-right">
             <nav class="footer-nav">
               <div class="nav-col">
                 <ul>
-                  <li>Prodotto</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li>
+                  <li class="title">Prodotto</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li>
                 </ul>
               </div>
               <div class="nav-col">
                 <ul>
-                  <li>Compagnia</li><li>Chi siamo</li><li>Lavora con noi</li><li>Marchio</li><li>Redazione</li><li>Negozio</li>
+                  <li class="title">Compagnia</li><li>Chi siamo</li><li>Lavora con noi</li><li>Marchio</li><li>Redazione</li><li>Negozio</li>
                 </ul>
               </div>
               <div class="nav-col">
                 <ul>
-                  <li>Risorse</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assitenza</li><li>Assitenza</li>
+                  <li class="title">Risorse</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assitenza</li><li>Assitenza</li>
                 </ul>
               </div>
               <div class="nav-col">
                 <ul>
-                  <li>Norme</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li>
+                  <li class="title">Norme</li><li>Scarica</li><li>Perchè Discord</li><li>Nitro</li><li>Sicurezza</li><li>Assistenza</li>
                 </ul>
               </div>
             </nav>
           </div>
         </div>
         <div class="footer-bottom">
-          <img src="" alt="logo" />
-          <button>button</button>
+          <img src="img/logo.svg" alt="logo" />
+          <button class="reg">Registrati</button>
         </div>
       </div>
     </footer>
